# Coding_Challenge_Generator

./: README.md
backend/: pyproject.toml
backend/src/: .env  app.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/auth/: Authenticationpage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: Challengegenerator.jsx  MCQchallenge.jsx
frontend/src/layout/: Layout.jsx
